--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,9 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <script>
+    <!-- <script>
       const icon = document.getElementById("toggler");
       console.log(icon);
-      // icon.onclick = () => {
-      //   document.body.classList.toggle("dark-theme");
-      // };
-    </script>
+    </script> -->
   </body>
 </html>
